--- a/templates/index.html
+++ b/templates/index.html
@@ -290,7 +290,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://blood-bridge.herokuapp.com/">
+                    <a href="{{url_for('home_page')}}">
                         <img src="{{url_for('static', filename='assets/images/logo2.png')}}" alt="Mobirise">
                     </a>
                 </div>
