--- a/templates/orglander.html
+++ b/templates/orglander.html
@@ -250,8 +250,8 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: vishwajeethogale307@gmail.com
-                    <br>Phone: +91 7760175955<br></p>
+                    Email: srujan.deshpande@gmail.com
+                    <br>Phone: +91 98864 84884<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
