--- a/templates/orgdashboard.html
+++ b/templates/orgdashboard.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="{{url_for('static', filename='assets/images/logo2.png')}}" type="image/x-icon">
-  <meta name="description" content="">
+  <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
+  <meta name="description" content="Web Site Builder Description">
 
 
-  <title>Blood Bridge</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="{{url_for('static', filename='assets/web/assets/mobirise-icons/mobirise-icons.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/bootstrap/css/bootstrap.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/bootstrap/css/bootstrap-grid.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/bootstrap/css/bootstrap-reboot.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/socicon/css/styles.css')}}">
-  <link rel="stylesheet" href="{{url_for('static', filename='assets/tether/tether.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/dropdown/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='assets/datatables/data-tables.bootstrap4.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='assets/tether/tether.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/theme/css/style.css')}}">
   <link rel="preload" as="style" href="{{url_for('static', filename='assets/mobirise/css/mbr-additional.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='assets/mobirise/css/mbr-additional.css')}}" type="text/css">
-
+  <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 
 
 </head>
@@ -71,42 +72,9 @@
     </nav>
 </section>
 
-<section class="header1 cid-rVbWAED0ac mbr-parallax-background" id="header1-5">
 
 
-
-    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(20, 157, 204);">
-    </div>
-
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">WELCOME TO BLOOD BRIDGE</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
-                    Donate Blood Effortlessly</h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    View all Blood Banks in your surroundings and view hospitals in need of blood!</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="#form1-8">REGISTER NOW!</a></div>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<section class="map2 cid-rVbWKmaKMo" id="map2-7">
-
-
-
-    <div class="container">
-        <div class="media-container-row">
-            <div class="col-md-8">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/d/embed?mid=1La_SsKk49r6VlboHlOQljRcft5s" allowfullscreen=""></iframe></div>
-        </div>
-    </div>
-</div></section>
-
-
-<section class="section-table cid-rVhxqFOU9A" id="table1-r">
+<section class="section-table cid-rVhxqFOU9A" id="alerttb">
 
 
 
@@ -169,7 +137,7 @@
 </section>
 
 
-<section class="section-table cid-rVhxqFOU9A" id="table1-r">
+<section class="section-table cid-rVhxqFOU9A " id="drivetb">
 
 
 
@@ -230,7 +198,71 @@
     </div>
 </section>
 
-<section class="mbr-section form1 cid-rVbWRm32n4" id="form1-8">
+
+<section class="section-table cid-rVhxqFOU9A" id="donortb">
+
+
+
+  <div class="container container-table">
+      <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">Registered Donors</h2>
+      <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-5">
+            View all registered  donors</h3>
+      <div class="table-wrapper">
+        <div class="container">
+          <div class="row search">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <div class="dataTables_filter">
+                  <label class="searchInfo mbr-fonts-style display-7">Search:</label>
+                  <input class="form-control input-sm" disabled="">
+                </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container scroll">
+          <table class="table isSearch" cellspacing="0">
+            <thead>
+              <tr class="table-heads ">
+
+
+              <th class="head-item mbr-fonts-style display-7">NAME</th>
+              <th class="head-item mbr-fonts-style display-7">EMAIL</th>
+              <th class="head-item mbr-fonts-style display-7">PHONE</th>
+              <th class="head-item mbr-fonts-style display-7">BLOOD GROUP</th>
+            </tr>
+            </thead>
+
+            <tbody id="donorTable">
+
+
+            <tr><td class="body-item mbr-fonts-style display-7">Ramesh Raj</td><td class="body-item mbr-fonts-style display-7">ramesh@email.com</td><td class="body-item mbr-fonts-style display-7">7676767676</td><td class="body-item mbr-fonts-style display-7">B+ve</td></tr>
+
+
+            </tbody>
+          </table>
+        </div>
+        <div class="container table-info-container">
+          <div class="row info">
+            <div class="col-md-6">
+              <div class="dataTables_info mbr-fonts-style display-7">
+                <span class="infoBefore">Showing</span>
+                <span class="inactive infoRows"></span>
+                <span class="infoAfter">entries</span>
+                <span class="infoFilteredBefore">(filtered from</span>
+                <span class="inactive infoRows"></span>
+                <span class="infoFilteredAfter"> total entries)</span>
+              </div>
+            </div>
+            <div class="col-md-6"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+
+<section class="mbr-section form1 cid-rVhxw6SZYr" id="form1-s">
 
 
 
@@ -239,46 +271,105 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    Register as a Donor to get Updates!</h2>
+                    NEW BLOOD REQUEST
+                </h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
-                    By registering as a Donor, get contacted when Blood is required by banks and when there is a donation camp near you!</h3>
+                    Create a new request for blood
+                </h3>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="media-container-column col-lg-8" >
+            <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form class="mbr-form form-with-styler" data-form-title="Mobirise Form" id="newDonorForm">
-
+                <form class="mbr-form form-with-styler" data-form-title="Mobirise Form" id="newAlert">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Successfully Registered!</div>
-                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Please Try Again!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="newAlertSuccess">Alert Successfully Added</div>
+                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="newAlertFailure">
+                        </div>
                     </div>
                     <div class="dragArea row">
-                        <div class="col-md-6  form-group" data-for="name">
-                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7">Name</label>
-                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-8">
+                        <div class="col-md-6  form-group" data-for="type">
+                            <label for="type-form1-s" class="form-control-label mbr-fonts-style display-7">Blood Type</label>
+                            <input type="text" name="type" data-form-field="Type" required="required" class="form-control display-7" id="type-form1-s">
                         </div>
-                        <div class="col-md-6  form-group" data-for="email">
-                            <label for="email-form1-8" class="form-control-label mbr-fonts-style display-7">Email</label>
-                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-8">
+                        <div class="col-md-6  form-group" data-for="location">
+                            <label for="location-form1-s" class="form-control-label mbr-fonts-style display-7">Location</label>
+                            <input type="text" name="location" data-form-field="Location" required="required" class="form-control display-7" id="location-form1-s">
+                        </div>
+                        <div data-for="priority" class="col-md-6 form-group">
+                            <label for="priority-form1-e" class="form-control-label mbr-fonts-style display-7">Priority</label>
+                            <select name="priority" data-form-field="Priority" class="form-control display-7">
+                              <option value="critical">Critical</option>
+                              <option value="medium">Medium</option>
+                              <option value="low">Low</option>
+                            </select>
                         </div>
                         <div data-for="phone" class="col-md-6  form-group">
-                            <label for="phone-form1-8" class="form-control-label mbr-fonts-style display-7">Phone</label>
-                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-8">
+                            <label for="phone-form1-e" class="form-control-label mbr-fonts-style display-7">Phone</label>
+                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-e">
                         </div>
-                        <div data-for="bloodgroup" class="col-md-6 form-group">
-                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">Blood Group</label>
-                            <input type="text" name="bloodgroup" data-form-field="Blood Group" class="form-control display-7" id="message-form1-8"></textarea>
+                        <div class="col-md-12 input-group-btn align-center">
+                            <button type="submit" class="btn btn-primary btn-form display-4">CREATE ALERT</button>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-secondary display-4">REGISTER AS DONOR</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
         </div>
     </div>
 </section>
+
+<section class="mbr-section form1 cid-rVhBc3rbpl" id="form1-t">
+
+
+
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-12 col-lg-8">
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
+                    NEW BLOOD DONATION CAMP
+                </h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
+                    Add a new blood donation drive
+                </h3>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="media-container-column col-lg-8" data-form-type="formoid">
+                <!---Formbuilder Form--->
+                <form class="mbr-form form-with-styler" data-form-title="Mobirise Form" id="newDrive">
+                    <div class="row">
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="newDriveSuccess">Blood Donation Drive Successfully Created</div>
+                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="newDriveFailure">Please try again</div>
+                    </div>
+                    <div class="dragArea row">
+                        <div class="col-md-4  form-group" data-for="name">
+                            <label for="name-form1-t" class="form-control-label mbr-fonts-style display-7">Blood Donation Drive Name</label>
+                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-t">
+                        </div>
+                        <div data-for="phone" class="col-md-4  form-group">
+                            <label for="phone-form1-t" class="form-control-label mbr-fonts-style display-7">Contact Number</label>
+                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-t">
+                        </div>
+                        <div data-for="location" class="col-md-4 form-group">
+                            <label for="location-form1-t" class="form-control-label mbr-fonts-style display-7">Location</label>
+                            <input type="text" name="location" data-form-field="Location" class="form-control display-7" id="location-form1-t">
+                        </div>
+                        <div class="col-md-12 input-group-btn align-center">
+                            <button type="submit" class="btn btn-primary btn-form display-4">CREATE DRIVE</button>
+                        </div>
+                    </div>
+                </form><!---Formbuilder Form--->
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 <section class="cid-rVbWW809Qo" id="footer1-9">
 
@@ -306,16 +397,16 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: vishwajeethogale307@gmail.com
-                    <br>Phone: +91 7760175955<br></p>
+                    Email: srujan.deshpande@gmail.com
+                    <br>Phone: +91 98864 84884<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Links
                 </h5>
                 <p class="mbr-text">
-                    <a class="text-primary" href="https://blood-bridge.herokuapp.com/">Placeholder link1</a>
-                    <br><a class="text-primary" href="https://blood-bridge.herokuapp.com/">Placeholder link2</a>
+                    <a class="text-primary" href="https://blood-bridge.herokuapp.com/">Future Links</a>
+                    <br><a class="text-primary" href="https://blood-bridge.herokuapp.com/">Future Links</a>
                 </p>
             </div>
         </div>
@@ -362,17 +453,19 @@
 
 
   <script src="{{url_for('static', filename='assets/web/assets/jquery/jquery.min.js')}}"></script>
+  <script src="{{url_for('static', filename='js/orgdash.js')}}"></script>
   <script src="{{url_for('static', filename='assets/popper/popper.min.js')}}"></script>
   <script src="{{url_for('static', filename='assets/bootstrap/js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static', filename='assets/smoothscroll/smooth-scroll.js')}}"></script>
   <script src="{{url_for('static', filename='assets/dropdown/js/nav-dropdown.js')}}"></script>
   <script src="{{url_for('static', filename='assets/dropdown/js/navbar-dropdown.js')}}"></script>
   <script src="{{url_for('static', filename='assets/touchswipe/jquery.touch-swipe.min.js')}}"></script>
-  <script src="{{url_for('static', filename='assets/parallax/jarallax.min.js')}}"></script>
+  <script src="{{url_for('static', filename='assets/mbr-tabs/mbr-tabs.js')}}"></script>
+  <script src="{{url_for('static', filename='assets/datatables/jquery.data-tables.min.js')}}"></script>
+  <script src="{{url_for('static', filename='assets/datatables/data-tables.bootstrap4.min.js')}}"></script>
   <script src="{{url_for('static', filename='assets/tether/tether.min.js')}}"></script>
   <script src="{{url_for('static', filename='assets/theme/js/script.js')}}"></script>
-  <script src="{{url_for('static', filename='js/add_new_donor.js')}}"></script>
-  <script src="{{url_for('static', filename='js/orgdash.js')}}"></script>
+
 
 
 </body>
