Adding registration of patients

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://blood-bridge.herokuapp.com/">
+                    <a href="/">
                          <img src="{{url_for('static', filename='assets/images/logo2.png')}}" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -230,6 +230,60 @@
     </div>
 </section>
 
+
+<section class="mbr-section form1 cid-rVbWRm32n4" id="form1-8">
+
+
+
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-12 col-lg-8">
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
+                    Register as a Patient !</h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
+                    By registering as a Patient, get blood from different blood banks and donation camps !</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="media-container-column col-lg-8" >
+                <!---Formbuilder Form--->
+                <form  action="{{url_for('add_new_patient')}}" class="mbr-form form-with-styler" data-form-title="Mobirise Form" id="newDonorForm" >
+
+                    <div class="row">
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Successfully Registered!</div>
+                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Please Try Again!</div>
+                    </div>
+                    <div class="dragArea row">
+                        <div class="col-md-6  form-group" data-for="name">
+                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7">Name</label>
+                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-8">
+                        </div>
+                        <div class="col-md-6  form-group" data-for="email">
+                            <label for="email-form1-8" class="form-control-label mbr-fonts-style display-7">Email</label>
+                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-8">
+                        </div>
+                        <div data-for="phone" class="col-md-6  form-group">
+                            <label for="phone-form1-8" class="form-control-label mbr-fonts-style display-7">Phone</label>
+                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-8">
+                        </div>
+                        <div data-for="bloodgroup" class="col-md-6 form-group">
+                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">Blood Group</label>
+                            <input type="text" name="bloodgroup" data-form-field="Blood Group" class="form-control display-7" id="message-form1-8"></textarea>
+                        </div>
+                        
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-secondary display-4">REGISTER AS PATIENT</button></div>
+                    </div>
+                </form><!---Formbuilder Form--->
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 <section class="mbr-section form1 cid-rVbWRm32n4" id="form1-8">
 
 
@@ -271,6 +325,10 @@
                         <div data-for="bloodgroup" class="col-md-6 form-group">
                             <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">Blood Group</label>
                             <input type="text" name="bloodgroup" data-form-field="Blood Group" class="form-control display-7" id="message-form1-8"></textarea>
+                        </div>
+                        <div data-for="bloodgroup" class="col-md-6 form-group">
+                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">Amount of Blood</label>
+                            <input type="text" name="amountofblood" data-form-field="Blood Group" class="form-control display-7" id="message-form1-8"></textarea>
                         </div>
                         <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-secondary display-4">REGISTER AS DONOR</button></div>
                     </div>
