--- a/templates/patlogin.html
+++ b/templates/patlogin.html
@@ -71,79 +71,8 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header6 cid-rVgIB1KMH6 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=36YgDDJ7XSc" id="header6-k">
 
 
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);">
-    </div>
-
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
-                    BLOOD BRIDGE CONNECTS ORGANIZATIONS AND DONORS
-                </h1>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    Are you a organization that accepts blood donations or requires blood? Register here to connect with donors and other organizations and set up publically viewable donation camps.
-                </p>
-                <div class="mbr-section-btn align-center">
-                        <a class="btn btn-md btn-primary display-4" href="#form1-e" id="regbutton">REGISTER</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="#form1-l" id="loginbutton">LOG IN</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</section>
-<section class="mbr-section form1 cid-rVgJ2117yv" id="form1-l">
-    <br>
-    <br>
-    <br>
-    <br>
-  
-  
-  
-  
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="title col-12 col-lg-8">
-                  <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                      Patient Login
-                  </h2>
-                  <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
-  
-                  </h3>
-              </div>
-          </div>
-      </div>
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="media-container-column col-lg-8" data-form-type="formoid">
-                  <!---Formbuilder Form--->
-                  <form id="orgLoginForm" action="/pat_login" class="mbr-form form-with-styler" data-form-title="Mobirise Form">
-                      <div class="row">
-                          <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="orgLoginSuccess">Successfully Logged in!</div>
-                          <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="orgLoginFailure">Error! Please try again</div>
-                      </div>
-                      <div class="dragArea row">
-                          <div class="col-md-6  form-group" data-for="email">
-                              <label for="email-form1-l" class="form-control-label mbr-fonts-style display-7">Email</label>
-                              <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-l">
-                          </div>
-                          <div class="col-md-6  form-group" data-for="password">
-                              <label for="password-form1-l" class="form-control-label mbr-fonts-style display-7">Password</label>
-                              <input type="password" name="password" data-form-field="Password" required="required" class="form-control display-7" id="password-form1-l">
-                          </div>
-                          <div class="col-md-12 input-group-btn align-center">
-                              <button type="submit" class="btn btn-primary btn-form display-4">LOGIN</button>
-                          </div>
-                      </div>
-                  </form><!---Formbuilder Form--->
-              </div>
-          </div>
-      </div>
-  </section>
 <section class="mbr-section form1 cid-rVgJ2117yv" id="form1-l">
   <br>
   <br>
@@ -157,7 +86,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    Organization Login
+                    Patient Login
                 </h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
 
@@ -169,7 +98,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form id="orgLoginForm" action="/org_dash" class="mbr-form form-with-styler" data-form-title="Mobirise Form">
+                <form id="orgLoginForm" action="/pat_login" class="mbr-form form-with-styler" data-form-title="Mobirise Form">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="orgLoginSuccess">Successfully Logged in!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="orgLoginFailure">Error! Please try again</div>
@@ -195,81 +124,7 @@
 
 
 
-<section class="mbr-section form1 cid-rVgtRIgTPz" id="form1-e">
 
-
-
-    <br>
-    <br>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-12 col-lg-8">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    Register New Organization</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Are you a organization that accepts blood donations or requires blood? Register here to connect with donors and other organizations and set up publically viewable donation camps.</h3>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="media-container-column col-lg-8" data-form-type="formoid">
-                <!---Formbuilder Form--->
-                <form id="newOrgForm" class="mbr-form form-with-styler">
-                    <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="newOrgSuccess">Successfully Registered!</div>
-                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="newOrgFailure">Sorry! Please try again</div>
-                    </div>
-                    <div class="dragArea row">
-                        <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-e" class="form-control-label mbr-fonts-style display-7">Orgnaization Name</label>
-                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-e">
-                        </div>
-                        <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-e" class="form-control-label mbr-fonts-style display-7">Email</label>
-                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-e">
-                        </div>
-                        <div data-for="phone" class="col-md-4  form-group">
-                            <label for="phone-form1-e" class="form-control-label mbr-fonts-style display-7">Phone</label>
-                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-e">
-                        </div>
-                        <div data-for="type" class="col-md-4 form-group">
-                            <label for="message-form1-e" class="form-control-label mbr-fonts-style display-7">Organization Type</label>
-                            <select name="type" data-form-field="Type" class="form-control display-7">
-                              <option value="bloodbank">Blood Bank</option>
-                              <option value="hospital">Hospital</option>
-                              <option value="ngo">NGO</option>
-                              <option value="other">Other</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4  form-group" data-for="address">
-                            <label for="address-form1-e" class="form-control-label mbr-fonts-style display-7">Address</label>
-                            <input type="text" name="address" data-form-field="Address" required="required" class="form-control display-7" id="address-form1-e">
-                        </div>
-                        <div class="col-md-4  form-group" data-for="city">
-                            <label for="city-form1-e" class="form-control-label mbr-fonts-style display-7">City</label>
-                            <input type="text" name="city" data-form-field="City" required="required" class="form-control display-7" id="city-form1-e">
-                        </div>
-                        <div class="col-md-4  form-group" data-for="state">
-                            <label for="state-form1-e" class="form-control-label mbr-fonts-style display-7">State</label>
-                            <input type="text" name="state" data-form-field="State" required="required" class="form-control display-7" id="state-form1-e">
-                        </div>
-                        <div class="col-md-4  form-group" data-for="pincode">
-                            <label for="pincode-form1-e" class="form-control-label mbr-fonts-style display-7">Pincode</label>
-                            <input type="number" name="pincode" data-form-field="Pincode" required="required" class="form-control display-7" id="pincode-form1-e">
-                        </div>
-                        <div class="col-md-4  form-group" data-for="password">
-                            <label for="password-form1-e" class="form-control-label mbr-fonts-style display-7">Password</label>
-                            <input type="password" name="password" data-form-field="Password" required="required" class="form-control display-7" id="password-form1-e">
-                        </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4">REGISTER</button></div>
-                    </div>
-                </form><!---Formbuilder Form--->
-            </div>
-        </div>
-    </div>
-    <br>
-    <br>
-</section>
 
 <section class="cid-rVbWW809Qo" id="footer1-9">
 
@@ -297,8 +152,8 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: srujan.deshpande@gmail.com
-                    <br>Phone: +91 98864 84884<br></p>
+                    Email: vishwajeethogale307@gmail.com
+                    <br>Phone: +91 xxxxx xxxxx<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
