--- a/templates/orglander.html
+++ b/templates/orglander.html
@@ -120,11 +120,12 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="media-container-column col-lg-8" data-form-type="formoid">
+                  
                   <!---Formbuilder Form--->
-                  <form id="orgLoginForm" action="/pat_login" class="mbr-form form-with-styler" data-form-title="Mobirise Form">
+                  <form id="patLoginForm" action="/pat_login" class="mbr-form form-with-styler" data-form-title="Mobirise Form">
                       <div class="row">
-                          <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="orgLoginSuccess">Successfully Logged in!</div>
-                          <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="orgLoginFailure">Error! Please try again</div>
+                          <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="patLoginSuccess">Successfully Logged in!</div>
+                          <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="patLoginFailure">Error! Please try again</div>
                       </div>
                       <div class="dragArea row">
                           <div class="col-md-6  form-group" data-for="email">
