Log in functionality done

--- a/templates/index.html
+++ b/templates/index.html
@@ -434,6 +434,7 @@
   <script src="{{url_for('static', filename='assets/tether/tether.min.js')}}"></script>
   <script src="{{url_for('static', filename='assets/theme/js/script.js')}}"></script>
   <script src="{{url_for('static', filename='js/add_new_donor.js')}}"></script>
+  <script src="{{url_for('static', filename='js/add_new_patient.js')}}"></script>
   <script src="{{url_for('static', filename='js/orgdash.js')}}"></script>
 
 
