--- a/templates/orglander.html
+++ b/templates/orglander.html
@@ -112,38 +112,12 @@
                       Patient Login
                   </h2>
                   <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
-  
+                    <a class="btn btn-md btn-black-outline display-4" href="/pat_login" >LOG IN</a>
                   </h3>
               </div>
           </div>
       </div>
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="media-container-column col-lg-8" data-form-type="formoid">
-                  
-                  <!---Formbuilder Form--->
-                  <form id="patLoginForm" action="/pat_login" class="mbr-form form-with-styler" data-form-title="Mobirise Form">
-                      <div class="row">
-                          <div hidden="hidden" data-form-alert="" class="alert alert-success col-12" id="patLoginSuccess">Successfully Logged in!</div>
-                          <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12" id="patLoginFailure">Error! Please try again</div>
-                      </div>
-                      <div class="dragArea row">
-                          <div class="col-md-6  form-group" data-for="email">
-                              <label for="email-form1-l" class="form-control-label mbr-fonts-style display-7">Email</label>
-                              <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-l">
-                          </div>
-                          <div class="col-md-6  form-group" data-for="password">
-                              <label for="password-form1-l" class="form-control-label mbr-fonts-style display-7">Password</label>
-                              <input type="password" name="password" data-form-field="Password" required="required" class="form-control display-7" id="password-form1-l">
-                          </div>
-                          <div class="col-md-12 input-group-btn align-center">
-                              <button type="submit" class="btn btn-primary btn-form display-4">LOGIN</button>
-                          </div>
-                      </div>
-                  </form><!---Formbuilder Form--->
-              </div>
-          </div>
-      </div>
+      
   </section>
 <section class="mbr-section form1 cid-rVgJ2117yv" id="form1-l">
   <br>
