Inventory management 50% done

--- a/templates/donor.html
+++ b/templates/donor.html
@@ -88,7 +88,7 @@
             <div class="row justify-content-center">
                 <div class="title col-12 col-lg-8">
                     <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                        Add your blood {{email}}
+                        Add your blood to {{email}}
                     </h2>
                     <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
 
@@ -115,6 +115,11 @@
                                     Units of blood?</label>
                                 <input type="number" name="units" data-form-field="Number" required="required"
                                     class="form-control display-7" id="email-form1-l">
+                            </div>
+                            <div class="col-md-6  form-group" data-for="email">
+                                <label for="email-form1-l" class="form-control-label mbr-fonts-style display-7">Email of the donor ?</label>
+                                <input type="email" name="email" data-form-field="Text" required="required" class="form-control display-7"
+                                    id="email-form1-l">
                             </div>
 
                             <div class="col-md-12 input-group-btn align-center">
