--- a/templates/donor.html
+++ b/templates/donor.html
@@ -105,9 +105,9 @@
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12"
                                 id="addbloodinSuccess">
-                                Successfully Logged in!</div>
+                                Successfully added the blood. Please Donate again!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"
-                                id="orgLoginFailure">Error! Please try again</div>
+                                id="addbloodinFailure">Update not successful. Please retry!</div>
                         </div>
                         <div class="dragArea row">
                             <div class="col-md-6  form-group" data-for="email">
