--- a/templates/index.html
+++ b/templates/index.html
@@ -386,7 +386,7 @@
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class="media-wrap">
-                        <a href="https://blood-bridge.herokuapp.com/">
+                        <a href="/">
                             <img src="{{url_for('static', filename='assets/images/logo2.png')}}" alt="Mobirise">
                         </a>
                     </div>
@@ -411,8 +411,8 @@
                         Links
                     </h5>
                     <p class="mbr-text">
-                        <a class="text-primary" href="https://blood-bridge.herokuapp.com/">Placeholder link1</a>
-                        <br><a class="text-primary" href="https://blood-bridge.herokuapp.com/">Placeholder link2</a>
+                        <a class="text-primary" href="">Placeholder link1</a>
+                        <br><a class="text-primary" href="">Placeholder link2</a>
                     </p>
                 </div>
             </div>
@@ -431,22 +431,22 @@
                     <div class="col-md-6">
                         <div class="social-list align-right">
                             <div class="soc-item">
-                                <a href="https://twitter.com/srujanHere" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://www.facebook.com/pages/srujandeshpande" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://www.youtube.com/channel/UCkCkfmaipCpUPt3YlxAdNeg" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://instagram.com/srujandeshpande" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
