--- a/templates/orgdashboard.html
+++ b/templates/orgdashboard.html
@@ -419,7 +419,7 @@
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class="media-wrap">
-                        <a href="https://blood-bridge.herokuapp.com/">
+                        <a href="">
                             <img src="{{url_for('static', filename='assets/images/logo2.png')}}" alt="Mobirise">
                         </a>
                     </div>
@@ -435,8 +435,8 @@
                         Contacts
                     </h5>
                     <p class="mbr-text">
-                        Email: srujan.deshpande@gmail.com
-                        <br>Phone: +91 98864 84884<br>
+                        Email: vishwajeethogale307@gmail.com
+                     
                     </p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -444,8 +444,8 @@
                         Links
                     </h5>
                     <p class="mbr-text">
-                        <a class="text-primary" href="https://blood-bridge.herokuapp.com/">Future Links</a>
-                        <br><a class="text-primary" href="https://blood-bridge.herokuapp.com/">Future Links</a>
+                        <a class="text-primary" href="">Future Links</a>
+                        <br><a class="text-primary" href="">Future Links</a>
                     </p>
                 </div>
             </div>
@@ -464,22 +464,22 @@
                     <div class="col-md-6">
                         <div class="social-list align-right">
                             <div class="soc-item">
-                                <a href="https://twitter.com/srujanHere" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://www.facebook.com/pages/srujandeshpande" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://www.youtube.com/channel/UCkCkfmaipCpUPt3YlxAdNeg" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://instagram.com/srujandeshpande" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
