--- a/templates/orglander.html
+++ b/templates/orglander.html
@@ -316,16 +316,16 @@
     </section>
 
     <section class="cid-rVbWW809Qo" id="footer1-9">
-
-
-
-
-
+    
+    
+    
+    
+    
         <div class="container">
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class="media-wrap">
-                        <a href="https://blood-bridge.herokuapp.com/">
+                        <a href="">
                             <img src="{{url_for('static', filename='assets/images/logo2.png')}}" alt="Mobirise">
                         </a>
                     </div>
@@ -341,8 +341,8 @@
                         Contacts
                     </h5>
                     <p class="mbr-text">
-                        Email: srujan.deshpande@gmail.com
-                        <br>Phone: +91 98864 84884<br>
+                        Email: vishwajeethogale307@gmail.com
+    
                     </p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -350,8 +350,8 @@
                         Links
                     </h5>
                     <p class="mbr-text">
-                        <a class="text-primary" href="https://blood-bridge.herokuapp.com/">Placeholder link1</a>
-                        <br><a class="text-primary" href="https://blood-bridge.herokuapp.com/">Placeholder link2</a>
+                        <a class="text-primary" href="">Future Links</a>
+                        <br><a class="text-primary" href="">Future Links</a>
                     </p>
                 </div>
             </div>
@@ -370,22 +370,22 @@
                     <div class="col-md-6">
                         <div class="social-list align-right">
                             <div class="soc-item">
-                                <a href="https://twitter.com/srujanHere" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://www.facebook.com/pages/srujandeshpande" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://www.youtube.com/channel/UCkCkfmaipCpUPt3YlxAdNeg" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://instagram.com/srujandeshpande" target="_blank">
+                                <a href="" target="_blank">
                                     <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
                                 </a>
                             </div>
