--- a/templates/orgdashboard.html
+++ b/templates/orgdashboard.html
@@ -140,6 +140,67 @@
             </div>
         </div>
     </section>
+    <section class="section-table cid-rVhxqFOU9A" id="alerttb">
+    
+    
+    
+        <div class="container container-table">
+            <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">Search Catalogue</h2>
+            <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-5">
+                All the blood that is available in the inventory</h3>
+            <div class="table-wrapper">
+                <div class="container">
+                    <div class="row search">
+                        <div class="col-md-6"></div>
+                        <div class="col-md-6">
+                            <div class="dataTables_filter">
+                                <label class="searchInfo mbr-fonts-style display-7">Search:</label>
+                                <input class="form-control input-sm" disabled="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="container scroll">
+                    <table class="table isSearch" cellspacing="0">
+                        <thead>
+                            <tr class="table-heads ">
+    
+                                <th class="head-item mbr-fonts-style display-7">UNITS</th>
+                                <th class="head-item mbr-fonts-style display-7">TYPE</th>
+                                <th class="head-item mbr-fonts-style display-7">ORGANIZATION</th>
+    
+                             
+                            </tr>
+                        </thead>
+    
+                        <tbody id="bloodTable">
+    
+    
+    
+    
+    
+                        </tbody>
+                    </table>
+                </div>
+                <div class="container table-info-container">
+                    <div class="row info">
+                        <div class="col-md-6">
+                            <div class="dataTables_info mbr-fonts-style display-7">
+                                <span class="infoBefore">Showing</span>
+                                <span class="inactive infoRows"></span>
+                                <span class="infoAfter">entries</span>
+                                <span class="infoFilteredBefore">(filtered from</span>
+                                <span class="inactive infoRows"></span>
+                                <span class="infoFilteredAfter"> total entries)</span>
+                            </div>
+                        </div>
+                        <div class="col-md-6"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <section class="section-table cid-rVhxqFOU9A " id="drivetb">
