Added session variable on dashboard so that we know which organization has logged in

--- a/templates/orgdashboard.html
+++ b/templates/orgdashboard.html
@@ -77,7 +77,15 @@
     </section>
 
     <br>
-
+    <section class="section-table cid-rVhxqFOU9A" id="alerttb">
+    
+    
+    
+        <div class="container container-table">
+            <h2 class="mbr-section-title mbr-fonts-style align-left pb-3 display-2">Welcome {{org}}</h2>
+            
+        </div>
+    </section>
     <section class="section-table cid-rVhxqFOU9A" id="alerttb">
 
 
